--- a/mblog/mainsite/templates/post.html
+++ b/mblog/mainsite/templates/post.html
@@ -1,8 +1,23 @@
+{% extends 'base.html' %}
+{% block title %}
+{{ post.title }} -- 天地
+{% endblock %}
+{% block headmessage %}
+<h3 style="font-family: 微软雅黑;">{{ post.title }}</h3>
+    <a style="font-family: 微软雅黑;" href="../">放回首页</a>
+{% endblock %}
+{% block content %}
+<p>
+    {{ post.body }}
+</p>
+{% endblock %}
+<!--
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>欢迎来到我的博客</title>
+    <title>欢迎来到我的博客
+    </title>
 </head>
 <body>
 <h1>{{ post.title }}</h1>
@@ -13,3 +28,4 @@
 <h3><a href="../">回到首页</a></h3>
 </body>
 </html>
+-->
