--- a/mblog/mainsite/templates/base.html
+++ b/mblog/mainsite/templates/base.html
@@ -30,31 +30,33 @@
                 <div class="panel-heading">
                     <h3> menu </h3>
                 </div>
-            </div>
-            <div class="panel-body">
-                <div class="list-group">
-                    <a href="/" class="list-group-item">home</a>
-                    <a href="http://www.baidu.com" class="list-group-item">百度搜索</a>
-                    <a href="http://www.taobao.com" class="list-group-item">淘宝购物</a>
+
+                <div class="panel-body">
+                    <div class="list-group">
+                        <a href="/" class="list-group-item">home</a>
+                        <a href="http://www.baidu.com" class="list-group-item">百度搜索</a>
+                        <a href="http://www.taobao.com" class="list-group-item">淘宝购物</a>
+                    </div>
                 </div>
             </div>
-
         </div>
-    </div>
 
-    <div class="panel panel-default">
-        <div class="panel-heading">
-            {% block headmessage %}
+        <div class="col-sm-8 col-md-8">
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    {% block headmessage %}
 
-            {% endblock %}
-        </div>
-        <div class="panel-body">
-            {% block content %}
+                    {% endblock %}
+                </div>
+                <div class="panel-body">
+                    {% block content %}
 
-            {% endblock %}
-        </div>
-        <div class="panel-footer">
-            {% include 'footer.html' %}
+                    {% endblock %}
+                </div>
+                <div class="panel-footer">
+                    {% include 'footer.html' %}
+                </div>
+            </div>
         </div>
     </div>
 </div>
